Fixed font size of sidebar to avoid content clipping; updated resume with minor text fixes and more readable skill exp scale

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,4 @@
----
----
+
 
 /* 
     ==TABLE OF CONTENTS==
@@ -108,6 +107,7 @@ body {
     padding: 1em 1em 0;
     text-align: center;
     background: url('/images/extra_clean_paper_@2X.jpg') repeat;
+    font-size: 16px;
     .sidebar-content {
         background: #fff;
         padding: 2em 3em;
